fix(renderer-app): room detailed page overflow

--- a/desktop/renderer-app/src/components/EditRoomPage/style.less
+++ b/desktop/renderer-app/src/components/EditRoomPage/style.less
@@ -1,18 +1,16 @@
+@import "flat-components/theme/fancy-scrollbar.less";
+
 .edit-room-page {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    overflow: auto;
     border-radius: 6px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
     background-color: #fff;
 }
 
 .edit-room-page-header-container {
-    position: fixed;
-    width: 86%;
-    z-index: 1;
-    margin: 0 24px;
-    padding: 16px 0;
-    background-color: #fff;
+    padding: 16px 24px;
 }
 
 .edit-room-page-header-title {
@@ -22,9 +20,9 @@
 }
 
 .edit-room-page-body {
-    width: 560px;
-    margin: 0 auto;
-    margin-top: 20px;
+    .fancy-scrollbar-mixin();
+    flex: 1;
+    padding: 0 148px;
 }
 
 .flat-color-scheme-dark {
